# Hibiscus

./: .gitignore  404.html  CONTRIBUTING.md  LICENSE  README.md  TODO.md  index.html  mkdocs.yml  package-lock.json  package.json  sitemap.xml  version.json  vite.config.ts  vitest.config.ts  workspace-schema-v1.json
.github/workflows/: ci.yml  docs.yml
architecture/commands.rs/: index.html
changelog/: index.html
dev/api-reference/: index.html
dev/architecture/: index.html
dev/contributing/: index.html
dev/hooks/: index.html
dev/icon-system/: index.html
dev/knowledge-graph-architecture/: index.html
dev/knowledge-pipeline/: index.html
docs/: changelog.md  index.md  workspace-schema-v1.json  workspace-schema-v1.md
docs/architecture/: commands.rs.md
docs/dev/: api-reference.md  architecture.md  contributing.md  hooks.md  icon-system.md  knowledge-pipeline.md  (+1 more)
scripts/: bump-version.js  hibiscus.cjs
search/: search_index.json
src/: App.css  App.tsx  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  workspace.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  commands.rs  error.rs  lib.rs  main.rs  migration.rs  tree.rs  watcher.rs  workspace.rs
src-tauri/src/commands/: calendar.rs  create_item.rs  files.rs  mod.rs  path.rs  study.rs  themes.rs  tree.rs  workspace.rs
src-tauri/src/knowledge/: cache.rs  chunker.rs  indexer.rs  mod.rs  parser.rs  query.rs  queue.rs  storage.rs  topics.rs  types.rs
tests/: save-functionality.test.ts  setup.ts  useCalendarController.test.ts
workspace-schema-v1/: index.html
(+147 files in other folders)
