[package]
name = "hibiscus"
version = "0.9.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hibiscus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7" # filesystem watching (read-only)
tauri-plugin-dialog = "2.5.0"
thiserror = "1" # Typed error handling
tokio = { version = "1", features = ["fs", "sync", "rt", "rt-multi-thread", "time", "macros"] } # Async I/O + knowledge worker
pdf-extract = "0.10"  # PDF text extraction (Phase 2)
zip = "2"             # DOCX zip-archive reading (Phase 2)
quick-xml = "0.37"    # DOCX XML paragraph parsing (Phase 2)

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }
